horizontal scroll production glitch solved

--- a/Frontend/app/styles.css
+++ b/Frontend/app/styles.css
@@ -6,6 +6,11 @@ body{
     overflow-x: hidden;
 }
 
+html{
+    max-width: 100vw;
+    overflow-x: hidden;
+}
+
 .topBar{
     background-color: #0a7367;
     height: 7vh;
@@ -397,6 +402,8 @@ body{
   @media (max-width: 700px) {
     body {
       font-size: 12px;
+      max-width: 100vw;
+      overflow-x: hidden;
     }
 
     .bottomsection3{
@@ -434,6 +441,10 @@ body{
 
     .section7card{
         width: 70vw;
+    }
+
+    .starStrip{
+        font-size: 0.8rem;
     }
 }
 
